<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.andrepenteado</groupId>
    <artifactId>sso</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>APsso</name>
    <description>Portal centralizado de autenticação de usuários e sistemas</description>

    <organization>
        <name>APcode</name>
        <url>http://www.apcode.com.br</url>
    </organization>

    <developers>
        <developer>
            <name>André Penteado</name>
            <email>andre.penteado@apcode.com.br</email>
            <organization>APcode</organization>
        </developer>
    </developers>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>core</module>
        <module>login</module>
        <module>controle</module>
        <module>portal</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
	         <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>br.unesp.fc.andrepenteado.core</groupId>
            <artifactId>common</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.loki4j</groupId>
            <artifactId>loki-logback-appender</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <repositories>
        <!--<repository>
            <id>github-apcode</id>
            <name>GitHub Packages - APcode</name>
            <url>https://maven.pkg.github.com/andrepenteado/apcore</url>
        </repository>-->
        <repository>
            <id>gitlab-maven</id>
            <name>APcore</name>
            <url>https://git.unesp.br/api/v4/projects/592/packages/maven</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgument>-proc:full</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
